--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
         </div>
 
-        <script type="module" src=""></script>
+        <script type="module" src="./js/index.js"></script>
     </body>
 
 </html>
